--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	],
 	"require": {
 		"php": ">=5.3.5",
-		"syrup/component-bundle": "dev-master",
+		"syrup/component-bundle": "~1.3.7",
 		"keboola/google-client-bundle": "1.1.*"
 	},
 	"require-dev": {
