--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
-		"syrup/development-bundle": "1.1.*"
+		"syrup/development-bundle": "dev-master"
 	},
 	"scripts": {
 		"post-install-cmd": [
