--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 		"incenteev-parameters": {
 			"keep-outdated": true,
 			"file": "vendor/keboola/syrup/app/config/parameters.yml",
-			"dist-file": "parameters.yml.dist"
+			"dist-file": "parameters.yml"
 		}
 	}
 }
