--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,11 @@
 	],
 	"require": {
 		"php": ">=5.3.5",
-		"keboola/google-client-bundle": "1.1.*"
+		"keboola/google-client-bundle": "1.1.*",
+		"keboola/syrup": "~1.2.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*",
-		"syrup/component-bundle": "~1.3.7",
-		"syrup/development-bundle": "dev-master"
+		"phpunit/phpunit": "3.7.*"
 	},
 	"scripts": {
 		"post-install-cmd": [
@@ -40,11 +39,11 @@
 	},
 	"target-dir": "Keboola/Google/DriveBundle",
 	"extra": {
-		"symfony-app-dir": "vendor/syrup/development-bundle/app",
-		"symfony-web-dir": "vendor/syrup/development-bundle/web",
+		"symfony-app-dir": "vendor/keboola/syrup/app",
+		"symfony-web-dir": "vendor/keboola/syrup/web",
 		"incenteev-parameters": {
 			"keep-outdated": true,
-			"file": "vendor/syrup/development-bundle/app/config/parameters.yml",
+			"file": "vendor/keboola/syrup/app/config/parameters.yml",
 			"dist-file": "parameters.yml.dist"
 		}
 	}
