--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "keboola/google-drive-bundle",
 	"type": "symfony-bundle",
-	"description": "Keboola Google API Client",
+	"description": "Keboola Google Drive Extractor",
 	"keywords": [],
 	"authors": [
 		{
@@ -17,8 +17,8 @@
 	],
 	"require": {
 		"php": ">=5.3.5",
-		"keboola/google-client-bundle": "1.1.*",
-		"keboola/syrup": "~1.3.0"
+		"keboola/google-client-bundle": "~1.1.4",
+		"syrup/component-bundle": "~1.6.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
