--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	"require": {
 		"php": ">=5.3.5",
 		"keboola/google-client-bundle": "~1.1.4",
-		"syrup/component-bundle": "~1.6.2"
+		"syrup/component-bundle": "~1.6.2",
+		"pimple/pimple": "2.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
