--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,20 @@
 	"require": {
 		"php": ">=5.4.0",
 		"keboola/google-client-bundle": "~1.1.5",
-		"syrup/component-bundle": "~1.9.0",
-		"pimple/pimple": "2.0.*"
+		"syrup/component-bundle": "~1.9.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
 	},
 	"scripts": {
 		"post-install-cmd": [
+		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
 			"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap"
 		],
 		"post-update-cmd": [
+		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
+		  	"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
 		]
