--- a/composer.json
+++ b/composer.json
@@ -17,21 +17,21 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"keboola/google-client-bundle": "~1.1.5",
-		"syrup/component-bundle": "~1.9.10"
+		"keboola/google-client-bundle": "~2.0.1",
+		"syrup/component-bundle": "~1.9.14"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
 	},
 	"scripts": {
 		"post-install-cmd": [
+		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getParameters",
 		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
-			"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap"
 		],
 		"post-update-cmd": [
+		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getParameters",
 		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
-		  	"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
 		]
@@ -44,10 +44,6 @@
 	"extra": {
 		"symfony-app-dir": "vendor/keboola/syrup/app",
 		"symfony-web-dir": "vendor/keboola/syrup/web",
-		"incenteev-parameters": {
-			"keep-outdated": true,
-			"file": "vendor/keboola/syrup/app/config/parameters.yml",
-			"dist-file": "parameters.yml"
-		}
+		"syrup-app-name": "ex-google-drive"
 	}
 }
