refactor: upgrade to Syrup 2.3

--- a/composer.json
+++ b/composer.json
@@ -18,23 +18,23 @@
 	"require": {
 		"php": ">=5.4.0",
 		"keboola/google-client-bundle": "~2.0.1",
-		"syrup/component-bundle": "~1.9.14"
+		"keboola/syrup": "~2.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
 	},
 	"scripts": {
-		"post-install-cmd": [
-		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getParameters",
-		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap"
-		],
-		"post-update-cmd": [
-		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getParameters",
-		  	"Syrup\\CoreBundle\\DeploymentHandler\\ScriptHandler::getSharedParameters",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
-		]
+        "post-install-cmd": [
+            "Keboola\\Syrup\\DeploymentHandler\\ScriptHandler::getParameters",
+            "Keboola\\Syrup\\DeploymentHandler\\ScriptHandler::getSharedParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap"
+        ],
+        "post-update-cmd": [
+            "Keboola\\Syrup\\DeploymentHandler\\ScriptHandler::getParameters",
+            "Keboola\\Syrup\\DeploymentHandler\\ScriptHandler::getSharedParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
+        ]
 	},
 	"minimum-stability": "stable",
 	"autoload": {
