--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4.0",
-		"keboola/google-client-bundle": "~2.0.1",
-		"keboola/syrup": "~2.3"
+		"keboola/google-client-bundle": "^3.0.3",
+		"keboola/syrup": "^2.5.23"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
